[project]
name = "bnet_simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CesareDev", email = "corsicesare.lavoro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
static = "bnet_simulator.static_runner:main_wrapper"
dynamic = "bnet_simulator.dynamic_runner:main_wrapper"
all = "bnet_simulator.all_runner:main_wrapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bnet_simulator"]

[tool.hatch.build]
sources = ["src"]
