[project]
name = "bnet_simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CesareDev", email = "corsicesare.lavoro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
]

[project.scripts]
launch = "bnet_simulator.batch_launcher:main"
plot = "bnet_simulator.plot_metrics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bnet_simulator"]

[tool.hatch.build]
sources = ["src"]
