[project]
name = "bnet_simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CesareDev", email = "corsicesare.lavoro@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[project.scripts]
train = "bnet_simulator.train_scheduler:main"
plot = "bnet_simulator.plot_metrics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bnet_simulator"]

[tool.hatch.build]
sources = ["src"]
